try adding max-width to stop horizontal scrolling?

--- a/style/style.scss
+++ b/style/style.scss
@@ -8,7 +8,7 @@ $detail-font: "Space Grotesk", Arial, Helvetica, sans-serif;
 html,
 body,
 main {
-  width: 100%;
+  max-width: 100%;
   box-sizing: border-box;
   overflow-x: hidden;
 }
